// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthWrapper should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
/>
`;

exports[`MonthWrapper should render with enableMaxWidth 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: auto;
  max-width: 100vw;
}

<div
  class="c0"
/>
`;
